<resources>
    <string name="app_name">The Train Book</string>
    <string name="powered_by">Powered by</string>
    <string name="btn_login">Login</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_id">Email Id</string>
    <string name="mobile_no">Mobile No</string>
    <string name="address">Address</string>
    <string name="MainActivity">Main Activity</string>
    <string name="address1">Address Line1</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="address2">Address Line2</string>

    <string name="dob">Date Of Birth</string>

    <string name="gender">Gender</string>
    <string name="company_name">Company Name</string>

    <string name="cameranotfound">There is no camera app present in this device.</string>
    <string name="gallerynotfound">There is no Gallery app present in this device.</string>


    <integer name="email_max_length">50</integer>
    <integer name="mobile_max_length">15</integer>
    <integer name="isd_max_length">5</integer>
    <integer name="animation_duration">450</integer>

    <string-array name="arr_languages">
        <item>EN</item>
        <item>BG</item>
        <item>DE</item>
        <item>FI</item>
    </string-array>

    <string-array name="view_types_dialog">
        <item name="image">Image (default)</item>
        <item name="voice">Voice message (custom)</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="community">Community</string>
    <string name="complain_box">Complain Box</string>

    <string name="permssionmsg">Please allow following permissions,denying permission will cause it to no longer function as intended.</string>
    <string name="bullet">&#8226;</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="sign_up">Sign Up</string>
    <string name="no_data_found">No data found</string>
    <string name="group_name">Group Name</string>
    <string name="last_msg">Last message</string>
    <string name="search">Search</string>
    <string name="report">Report</string>
</resources>
