<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/menu_group_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menuCommunity"
            android:icon="@drawable/ic_community"
            android:title="@string/community" />
    </group>
    <group
        android:id="@+id/menu_group_2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menuComplainBox"
            android:icon="@drawable/ic_complain"
            android:title="@string/complain_box"
            app:actionViewClass="android.widget.TextView" />
    </group>
    <group
        android:id="@+id/menu_group_3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menuProfile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile"
            app:actionViewClass="android.widget.TextView" />
    </group>
    <group
        android:id="@+id/menu_group_5"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menuReport"
            android:icon="@drawable/ic_reports"
            android:title="@string/report"
            app:actionViewClass="android.widget.TextView" />
    </group>

    <group
        android:id="@+id/menu_group_4"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menuLogout"
            android:icon="@drawable/ic_exit"
            android:title="@string/logout"
            app:actionViewClass="android.widget.TextView" />
    </group>


</menu>